syntax = "proto3";

package growing.gateway;

import "google/protobuf/empty.proto";

option java_package = "io.growing.gateway";
option java_multiple_files = true;
option java_outer_classname = "SchemeProto";

message FileDescriptorDto {
  string name = 1;
  bytes content = 2;
}

message SchemeDto {

  repeated FileDescriptorDto graphql_definitions = 1;
  repeated FileDescriptorDto restful_definitions = 2;

}

service SchemeService {

  rpc GetScheme(google.protobuf.Empty) returns(SchemeDto){
  }

}
